--- a/public_records_portal/templates/base.html
+++ b/public_records_portal/templates/base.html
@@ -139,16 +139,18 @@
     <script type="text/javascript" src="{{ url_for('static', filename='custom.dataTables.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='DT_bootstrap.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='jquery.ellipsis.js') }}"></script>
-    
+
+    <script type="text/javascript" src="{{ url_for('static', filename='prr.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='home.js') }}"></script>
+
+    <script> 
+    $(document).ready(function(){
+      prr.init();
+    });
+    </script>
+
     {% block bottom_script %}
-<!--       $(document).ready(function(){
-        $("#floating_link").hover(function(){
-          $(this).filter(':not(:animated)').animate({ left: "-50px" });
-        }, 
-        function() {
-          $(this).animate({ left: "-40px" });
-        });
-      }); -->
+
     {% endblock bottom_script %}
 
     <!-- get satisfaction feedback tab 
